--- a/index.html
+++ b/index.html
@@ -6,8 +6,26 @@
     <title>Protect the Earth</title>
     <link rel="stylesheet" href="./src/style.css">
 
-    <script defer src="./src/js/classes.js"></script>
-    <script defer src="./src/script.js"></script>
+    <script defer src="./src/js/inicialize.js"></script>
+
+
+
+
+    <script defer src="./src/js/estrela.js"></script>
+
+    <script defer src="./src/js/sprite.js"></script>
+
+        <script defer src="./src/js/meteoro.js"></script>
+
+        <script defer src="./src/js/esfera.js"></script>
+
+            <script defer src="./src/js/projetil.js"></script>
+
+                <script defer src="./src/js/particula.js"></script>
+
+        <script defer src="./src/js/terra.js"></script>
+        
+    <script defer src="./src/js/main.js"></script>
 </head>
 
 <body>
