--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 
     <script defer src="./src/js/sprite.js"></script>
 
+        <script defer src="./src/js/planeta.js"></script>
+        
         <script defer src="./src/js/meteoro.js"></script>
 
         <script defer src="./src/js/esfera.js"></script>
 
-            <script defer src="./src/js/projetil.js"></script>
-
-                <script defer src="./src/js/particula.js"></script>
-
-        <script defer src="./src/js/terra.js"></script>
+        <script defer src="./src/js/jogador.js"></script>
 
         <script defer src="./src/js/radome.js"></script>
 
-        <script defer src="./src/js/jogador.js"></script>
+        <script defer src="./src/js/projetil.js"></script>
+
+        <script defer src="./src/js/particula.js"></script>
         
     <script defer src="./src/js/main.js"></script>
 </head>
