--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <script defer src="./src/js/sprite.js"></script>
 
         <script defer src="./src/js/planeta.js"></script>
-        
-        <script defer src="./src/js/meteoro.js"></script>
 
         <script defer src="./src/js/esfera.js"></script>
 
         <script defer src="./src/js/jogador.js"></script>
+
+        <script defer src="./src/js/meteoro.js"></script>
 
         <script defer src="./src/js/radome.js"></script>
 
@@ -31,6 +31,10 @@
 
 <body>
     <p class="score">PONTUAÇÃO: 0</p>
+
+    <div class="container-barra-de-vida">
+        <div class="barra-de-vida"></div>
+    </div>
 
     <div class="modal">
         <div class="gameOverContainer">
