--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Protect the Earth</title>
     <link rel="stylesheet" href="./src/style.css">
 
+    <link rel="icon" href="./src/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./src/img/favicon.svg" type="image/svg+xml">
+
     <script defer src="./src/js/inicialize.js"></script>
 
     <script defer src="./src/js/estrela.js"></script>
@@ -54,6 +57,15 @@
             <button class="btn iniciarJogo">COMEÇAR</button>
         </div>
     </div>
+
+    <audio src="./src/sounds/thema.mp3" loop id="music-game"></audio>
+
+    <audio src="./src/sounds/shooting.mp3"></audio>
+    <audio src="./src/sounds/explosion.ogg"></audio>
+
+    <audio autoplay>
+        <source src="./src/sounds/thema.mp3" type="audio/mpeg">
+    </audio>
 
     <canvas id="myCanvas"></canvas>
 </body>
