--- a/index.html
+++ b/index.html
@@ -65,21 +65,10 @@
     <audio src="./src/sounds/explosion.ogg"></audio>
 
     <div class="controles">
-        <div class="btn esquerda">
-            <img src="./src/img/seta-d.svg" alt="">
-        </div>
-
-        <div class="btn direita">
-            <img src="./src/img/seta-e.svg" alt="">
-        </div>
-
-        <div class="btn acelerar">
-            <img src="./src/img/seta-cima.svg" alt="">
-        </div>
-
-        <div class="btn atirar">
-            <img src="./src/img/btn-tiro.svg" alt="">
-        </div>
+        <div class="btn esquerda"></div>
+        <div class="btn direita"></div>
+        <div class="btn acelerar"></div>
+        <div class="btn atirar"></div>
     </div>
 
     <canvas id="myCanvas"></canvas>
